--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </form>
     <hr>
     <h2>아이템 한개 이상 드랍 확률</h2>
+    <p>데이터 출처 : <a href="https://mapledb.kr/">https://mapledb.kr/</a> </p>
     <p id="drop-probability"></p>
     <table id="drop-table" border="1px">
         <tr>
