사용법 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Monster Drop Probability Calculator</h1>
+    <p>사용 전 반드시 <a href="https://cors-anywhere.herokuapp.com/ ">https://cors-anywhere.herokuapp.com/</a>에서</p>
+    <P><boo style="color: blue;">Request temporary access to the demo server </boo> 버튼을 눌러주세요</P>
     <form id="drop-form">
         <label for="monster-code">몬스터 코드:</label>
         <input type="text" id="monster-code" name="monster-code"><br>
