--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h1>Monster Drop Probability Calculator</h1>
     <p>사용 전 반드시 <a href="https://cors-anywhere.herokuapp.com/ ">https://cors-anywhere.herokuapp.com/</a>에서</p>
     <P><boo style="color: blue;">Request temporary access to the demo server </boo> 버튼을 눌러주세요</P>
+    <p>몬스터 코드 알아내는 법은 매랜디비 들어가서 몬스터 정보 들어가면 주소에 </p>
+    <p >https://mapledb.kr/search.php?q=<code style="color: blue;">{몬스터코드}</code>&t=mob</p>
+    <p>저 중괄호 부분이 몬스터 코드입니다</p>
     <form id="drop-form">
         <label for="monster-code">몬스터 코드:</label>
         <input type="text" id="monster-code" name="monster-code"><br>
